--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.18.0",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
