--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "socket.io": "^4.8.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
