--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-type": "^21.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
