--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "validator": "^13.15.15"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@jest/globals": "^30.2.0",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "socket.io-client": "^4.8.3"
   }
 }
